modificado por Roberto

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
-*.py linguist-language=Python
+linguist-language=Python
+*.py linguist-language=django
 *.html linguist-language=HTML
 *.css  linguist-language=CSS
 *.js linguist-language=JavaScript
